--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -36,6 +36,10 @@
   .padding1px {
     padding-top: 1px;
   }
+
+  .paddingSections {
+    padding-bottom: 20px;
+  }
   
   .list {
     list-style: none;
